--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.75",
-    "universal-cookie": "^4.0.2"
+    "universal-cookie": "^4.0.2",
+    "validator": "^11.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
